updated system resource